# swagger/swagger.yml
@@ -695,6 +695,120 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /proceso_parametro/:
+    get:
+      tags:
+      - proceso_parametro
+      description: get ProcesoParametro
+      operationId: ProcesoParametroController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ProcesoParametro'
+        "403":
+          description: ""
+    post:
+      tags:
+      - proceso_parametro
+      description: create ProcesoParametro
+      operationId: ProcesoParametroController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for ProcesoParametro content
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProcesoParametro'
+      responses:
+        "201":
+          description: '{int} models.ProcesoParametro'
+        "403":
+          description: body is empty
+  /proceso_parametro/{id}:
+    get:
+      tags:
+      - proceso_parametro
+      description: get ProcesoParametro by id
+      operationId: ProcesoParametroController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ProcesoParametro'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - proceso_parametro
+      description: update the ProcesoParametro
+      operationId: ProcesoParametroController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for ProcesoParametro content
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProcesoParametro'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ProcesoParametro'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - proceso_parametro
+      description: delete the ProcesoParametro
+      operationId: ProcesoParametroController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
   /respuesta/:
     get:
       tags:
@@ -956,12 +1070,19 @@ definitions:
         type: boolean
       EspacioAcademicoId:
         type: string
+      EspacioProyectoCurricularId:
+        type: string
       EvaluadoId:
-        type: integer
-        format: int64
+        type: string
+      EvaluadorId:
+        type: string
+      EvaluadorProyectoCurricularId:
+        type: string
       FechaCreacion:
         type: string
       FechaModificacion:
+        type: string
+      Grupos:
         type: string
       Id:
         type: integer
@@ -969,10 +1090,7 @@ definitions:
       PeriodoId:
         type: integer
         format: int64
-      ProyectoCurricularId:
-        type: integer
-        format: int64
-      TerceroId:
+      ProcesoId:
         type: integer
         format: int64
   models.FormularioPlantillaRespuesta:
@@ -1054,6 +1172,29 @@ definitions:
         format: int64
       SeccionId:
         $ref: '#/definitions/models.Seccion'
+  models.ProcesoParametro:
+    title: ProcesoParametro
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      FechaCreacion:
+        type: string
+      FechaFin:
+        type: string
+      FechaInicio:
+        type: string
+      FechaModificacion:
+        type: string
+      Id:
+        type: integer
+        format: int64
+      PorcentajeProceso:
+        type: number
+        format: double
+      ProcesoId:
+        type: integer
+        format: int32
   models.Respuesta:
     title: Respuesta
     type: object
@@ -1112,3 +1253,6 @@ tags:
 - name: formrespuesta
   description: |
     FormularioPlantillaRespuestaController operations for FormularioPlantillaRespuesta
+- name: proceso_parametro
+  description: |
+    ProcesoParametroController operations for ProcesoParametro
